# obs-downstream-keyer

./: CMakeLists.txt  README.md  buildspec.json  downstream-keyer-dock.cpp  downstream-keyer-dock.hpp  downstream-keyer.cpp  downstream-keyer.hpp  installer.iss.in  name-dialog.cpp  output-source.c
.github/scripts/utils.zsh/: setup_ubuntu
.github/workflows/: build-project.yaml  build.yml
CI/macos/: downstream-keyer.pkgproj
data/locale/: en-US.ini  es-ES.ini  fr-FR.ini  pt-BR.ini  zh-CN.ini
